---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 5.0.0
Date: 2025-03-29
  Changes:
    - Renamed mod in order to avoid confusion with the original Construction Planner by ceresward, which has seen active development for Factorio 2.0. Take note that the two code 
bases have diverged at this point.
    - Renamed /cp_cleanup command to /ca_cleanup (for naming consistency).
    - Default size of approval indicators has been reduced. Previous value can be configured by setting "Approval indicator size" to "Huge" in the map settings.
  Features:
    - Improved performance when using blueprint books from inventory or blueprint library.
    - Setting for controlling the size of approval indicators.
  Bugfixes:
    - Placeholder markers are no longer included in updated blueprints from player/game library.
---------------------------------------------------------------------------------------------------
Version: 4.0.7
Date: 2025-02-22
  Bugfixes:
    - Fixed crash when using blueprint book which contains blueprint without any entities.
---------------------------------------------------------------------------------------------------
Version: 4.0.6
Date: 2024-11-17
  Features:
    - The /cp_cleanup command now removes all built unapproved ghost entity placeholders. Unapproved ghost entity placeholders getting built in the first place should be considered a bug. Reproduction steps are welcome.
---------------------------------------------------------------------------------------------------
Version: 4.0.5
Date: 2024-11-06
  Bugfixes:
    - Fixed tiles getting removed from created/updated blueprints when using unapproved ghosts.